Fill Java/Logging
- log4j system components: Logger/Appender/Layout triad, Log4j 2 LoggerContext + LoggerConfig split, additivity (Log4j 2 manual architecture chapter); merge pipeline draft
- Logger abstraction: named handle, effective level by name hierarchy, parameterized logging
- Appender: targets catalogue, rolling policies, AsyncAppender, error containment
- logging levels: TRACE..FATAL severity ladder, ALL/OFF extremes (Level javadoc), draft's inverted OFF<TRACE order fixed; merge 2 level drafts
- configuration approaches: Log4j 2 ConfigurationFactory + log4j2.configurationFile; Log4j 1 PropertyConfigurator/DOMConfigurator, log4j.configuration (1.2 manual); Log4j 1 EOL Aug 5, 2015
- Layout: PatternLayout vocabulary, %r [%t] %-5p %c - %m%n classic (1.2 manual), JSON/GELF for machines
- log types: system / security / application taxonomy, routing via logger subtrees
- viewing logs of a running process: appender destinations (tail/journalctl/docker/kubectl), -Xlog + jcmd VM.log (java/jcmd man pages)
- dedup: remove 4 drafts merged into filled cards (levels x3, config x2, pipeline stub, empty categories stub)